mobile spacing issue on headline

--- a/dev/css/application.css
+++ b/dev/css/application.css
@@ -255,7 +255,7 @@ p {
   display: inline-block;
   font-size: 3rem;
   letter-spacing: .10em;
-  margin-bottom: 4.8rem;
+  margin-bottom: 6rem;
   position: relative;
   text-transform: uppercase;
   z-index: 1;
