--- a/dev/src/scss/base/_typography.scss
+++ b/dev/src/scss/base/_typography.scss
@@ -32,6 +32,10 @@ p {
 }
 
 
+
+
+
+// Font Size 30px
 .headline--primary {
   position: relative;
   h3 {
@@ -39,7 +43,7 @@ p {
     display: inline-block;
     font-size: 3rem;
     letter-spacing: .10em;
-    margin-bottom: $base-spacing * 2;
+    margin-bottom: 6rem;
     position: relative;
     text-transform: uppercase;
     z-index: 1;
